--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<li><a href="arbor/arbor.html">Arbor Cafe</a></li>
 	<li><a href="pets/pets.html">Pets Galore</a></li>
 	<li><a href="downtown/downtown.html">Downtown Dallas Events</a></li>
+	<li><a href="bookworm/bookworm.html">Bookworm</a></li>
 </ul>
 
 <p>Our portfolio offers you a <em>display of web layouts</em> - a sampling of what we can do for you!</p>
