--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<li><a href="pets/pets.html">Pets Galore</a></li>
 	<li><a href="downtown/downtown.html">Downtown Dallas Events</a></li>
 	<li><a href="bookworm/bookworm.html">Bookworm</a></li>
+	<li><a href="project/project.html">Project</a></li>
 </ul>
 
 <p>Our portfolio offers you a <em>display of web layouts</em> - a sampling of what we can do for you!</p>
